# Snake_game

./: .gitignore  Board.h  CMakeLists.txt  Game.cpp  Game.h  InputHandler.h  Leaderboard.h  Move.h  README.md  Snake.h  icon.rc  main.cpp
Core/: Board.cpp  Board.h  Food.cpp  Food.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Leaderboard.cpp  Leaderboard.h  Move.h  Position.h  Postion.h  PowerUp.h  Utils.h  snake.cpp  snake.h
GUI/: BoardWidget.cpp  BoardWidget.h  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  main.cpp  resources.qrc
Src/: main.cpp
Src/Core/: Board.h  Food.h  Game.cpp  Game.h  Leaderboard.cpp  Leaderboard.h  Move.h  Position.h  PowerUp.h  snake.cpp  snake.h
Src/GUI/: BoardWidget.cpp  BoardWidget.h  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui
